tests/baselines/reference/bigint-numeric-separator-literal-dd-nsl-err.errors.txt
bigint-numeric-separator-literal-dd-nsl-err.ts(37,2): error TS6188: Numeric separators are not allowed here.


==== bigint-numeric-separator-literal-dd-nsl-err.ts (1 errors) ====
    // Copyright (C) 2019 Leo Balter. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-NumericLiteralSeparator
    description: >
      NumericLiteralSeparator may not be the last digit character
    info: |
      NumericLiteral ::
        DecimalIntegerLiteral BigIntLiteralSuffix
        NumericLiteralBase BigIntLiteralSuffix
    
      NumericLiteralBase ::
        BinaryIntegerLiteral
        OctalIntegerLiteral
        HexIntegerLiteral
    
      BigIntLiteralSuffix :: n
    
      NumericLiteralSeparator ::
        _
    
      DecimalLiteral ::
        DecimalIntegerLiteral . DecimalDigits_opt ExponentPart_opt
    
      DecimalDigits ::
        ...
        DecimalDigits NumericLiteralSeparator DecimalDigit
    
    negative:
      phase: parse
      type: SyntaxError
    features: [BigInt, numeric-separator-literal]
    ---*/
    
    
    1_n;
     ~
!!! error TS6188: Numeric separators are not allowed here.
    